Translated on translate.pretix.eu (German (informal))
Currently translated at 100.0% (2288 of 2288 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de_Informal/

powered by weblate

--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 20:16+0000\n"
-"PO-Revision-Date: 2018-03-26 20:48+0000\n"
+"PO-Revision-Date: 2018-03-26 21:06+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German (informal) "
 "<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
@@ -6821,7 +6821,7 @@ msgid ""
 "the payment methods that fit your workflow best. Here are just two of them "
 "as examples, you can add more in the \"Settings\" part of your event."
 msgstr ""
-"Pretix unterstützt <a href=\"https://pretix.eu/about/de/features/payment\" "
+"pretix unterstützt <a href=\"https://pretix.eu/about/de/features/payment\" "
 "target=\"_blank\">eine breite Auswahl an Zahlungsanbietern</a>, aus denen du "
 "frei wählen kannst. Hier sind nur zwei Beispiele aufgeführt, weitere findest "
 "unter dem Menüpunkt \"Einstellungen\" unter \"Zahlung\"."
