--- a/src/pretix/locale/fr/LC_MESSAGES/django.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 20:16+0000\n"
-"PO-Revision-Date: 2018-03-22 17:35+0000\n"
-"Last-Translator: Claude <superoxyde@laposte.net>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix/fr/"
-">\n"
+"PO-Revision-Date: 2018-03-29 04:00+0000\n"
+"Last-Translator: Nicolas Pettiaux <nicolas@pettiaux.be>\n"
+"Language-Team: French "
+"<https://translate.pretix.eu/projects/pretix/pretix/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -453,6 +453,10 @@ msgid ""
 "country returned an incorrect result. We will therefore need to charge VAT "
 "on your invoice. Please contact support to resolve this manually."
 msgstr ""
+"Votre numéro de TVA n'a pas pu être vérifié car le service de vérification "
+"de votre pays a renvoyé un résultat erroné. Nous devons donc vous facturer "
+"la TVA. Merci de prendre contact avec notre service de support pour résoudre "
+"ceci manuellement."
 
 #: pretix/base/forms/user.py:16 pretix/control/forms/users.py:15
 msgid ""
@@ -522,6 +526,8 @@ msgid ""
 "Invalid placeholder syntax: You used a different number of \"{\" than of "
 "\"}\"."
 msgstr ""
+"Syntaxe de substitution invalide:  vous devriez utiliser des numéros "
+"différents de \"{\" ou de \"}\"."
 
 #: pretix/base/forms/validators.py:39
 #, python-format
