--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-26 20:16+0000\n"
+"POT-Creation-Date: 2018-04-04 11:02+0000\n"
 "PO-Revision-Date: 2018-03-10 13:20+0000\n"
 "Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
 "Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-js/"
@@ -190,6 +190,12 @@ msgstr "Andre"
 #: pretix/static/pretixcontrol/js/ui/question.js:70
 msgid "Count"
 msgstr "Antal"
+
+#: pretix/static/pretixcontrol/js/ui/subevent.js:108
+msgid "(one more date)"
+msgid_plural "({num} more dates)"
+msgstr[0] ""
+msgstr[1] ""
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
