--- a/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-26 20:16+0000\n"
+"POT-Creation-Date: 2018-04-04 11:02+0000\n"
 "PO-Revision-Date: 2018-03-10 13:20+0000\n"
 "Last-Translator: Matheus Nunes <matheus@integrate.com.br>\n"
 "Language-Team: Portuguese (Brazil) <https://translate.pretix.eu/projects/"
@@ -193,6 +193,12 @@ msgstr "Outros"
 #: pretix/static/pretixcontrol/js/ui/question.js:70
 msgid "Count"
 msgstr "Contagem"
+
+#: pretix/static/pretixcontrol/js/ui/subevent.js:108
+msgid "(one more date)"
+msgid_plural "({num} more dates)"
+msgstr[0] ""
+msgstr[1] ""
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
