Translated on translate.pretix.eu (German (informal))
Currently translated at 100.0% (2357 of 2357 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de_Informal/

powered by weblate

--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-04-04 11:18+0000\n"
+"PO-Revision-Date: 2018-04-04 12:12+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German (informal) "
 "<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
@@ -10868,8 +10868,8 @@ msgid ""
 "We were unable to transfer the money back automatically. Please get in touch "
 "with the customer and transfer it back manually."
 msgstr ""
-"Wir konnten den Geldbetrag nicht automatisch erstatten. Bitte nimm Kontakt "
-"mit dem Kunden auf und überweise ihn manuell zurück."
+"Wir konnten das Geld nicht automatisch zurückerstatten. Bitte setze dich mit "
+"dem Kunden in Verbindung und erstatte es manuell zurück."
 
 #: pretix/plugins/paypal/signals.py:27
 msgid "Payment completed."
@@ -11945,8 +11945,8 @@ msgid ""
 "Sorry, there was an error in the payment process. Please check the link in "
 "your emails to continue."
 msgstr ""
-"Es gab einen Fehler im Zahlungsablauf. Bitte nutze den Link aus der an dich "
-"verschickten E-Mail, um fortzufahren."
+"Sorry, es gab einen Fehler im Bezahlvorgang. Bitte klicke den Link in der E-"
+"Mail, die wir dir geschickt haben, um fortzufahren."
 
 #: pretix/plugins/stripe/views.py:352
 msgid ""
