--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-04-04 11:11+0000\n"
+"PO-Revision-Date: 2018-04-04 12:12+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -10894,8 +10894,8 @@ msgid ""
 "We were unable to transfer the money back automatically. Please get in touch "
 "with the customer and transfer it back manually."
 msgstr ""
-"Wir konnten den Geldbetrag nicht automatisch erstatten. Bitte nehmen Sie "
-"Kontakt mit dem Kunden auf und überweisen Sie ihn manuell zurück."
+"Wir konnten das Geld nicht automatisch zurückerstatten. Bitte setzen Sie "
+"sich mit dem Kunden in Verbindung und erstatten Sie es manuell zurück."
 
 #: pretix/plugins/paypal/signals.py:27
 msgid "Payment completed."
