Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2357 of 2357 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-04-04 12:12+0000\n"
+"PO-Revision-Date: 2018-04-04 13:23+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -11974,8 +11974,9 @@ msgid ""
 "Sorry, there was an error in the payment process. Please check the link in "
 "your emails to continue."
 msgstr ""
-"Es gab einen Fehler im Zahlungsablauf. Bitte nutzen Sie den Link aus der an "
-"Sie verschickten E-Mail, um fortzufahren."
+"Entschuldigen Sie bitte, es gab einen Fehler im Bezahlvorgang. Bitte klicken "
+"Sie auf den Link in der E-Mail, die wir Ihnen geschickt haben, um "
+"fortzufahren."
 
 #: pretix/plugins/stripe/views.py:352
 msgid ""
