--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-04-05 11:58+0000\n"
-"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"PO-Revision-Date: 2018-04-05 20:00+0000\n"
+"Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -618,7 +618,7 @@ msgstr "Beskrivelse"
 #: pretix/base/invoice.py:361 pretix/base/invoice.py:369
 msgctxt "invoice"
 msgid "Qty"
-msgstr ""
+msgstr "Antal"
 
 #: pretix/base/invoice.py:362 pretix/base/invoice.py:425
 msgctxt "invoice"
