Translated on translate.pretix.eu (Danish)
Currently translated at 100.0% (60 of 60 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/da/

powered by weblate

--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -7,10 +7,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-03-10 13:20+0000\n"
-"Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-js/"
-"da/>\n"
+"PO-Revision-Date: 2018-04-06 11:49+0000\n"
+"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-"
+"js/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,8 +194,8 @@ msgstr "Antal"
 #: pretix/static/pretixcontrol/js/ui/subevent.js:108
 msgid "(one more date)"
 msgid_plural "({num} more dates)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(en dato mere)"
+msgstr[1] "({num} datoer mere)"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
