--- a/src/pretix/locale/fr/LC_MESSAGES/django.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-04 11:02+0000\n"
-"PO-Revision-Date: 2018-03-29 04:00+0000\n"
-"Last-Translator: Nicolas Pettiaux <nicolas@pettiaux.be>\n"
-"Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix/fr/"
-">\n"
+"PO-Revision-Date: 2018-04-08 02:00+0000\n"
+"Last-Translator: Claude <superoxyde@laposte.net>\n"
+"Language-Team: French "
+"<https://translate.pretix.eu/projects/pretix/pretix/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1854,7 +1854,7 @@ msgstr "Possibilité de modifier les ordres"
 
 #: pretix/base/models/organizer.py:161
 msgid "Can view vouchers"
-msgstr "Possibilité de visualiser les bons de réduction "
+msgstr "Possibilité de visualiser les bons de réduction"
 
 #: pretix/base/models/organizer.py:165
 msgid "Can change vouchers"
