--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-12 10:41+0000\n"
-"PO-Revision-Date: 2018-04-06 21:00+0000\n"
+"PO-Revision-Date: 2018-04-12 11:58+0000\n"
 "Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix/da/"
-">\n"
+"Language-Team: Danish "
+"<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11486,25 +11486,27 @@ msgid ""
 "Please enter the same email address again to make sure you typed it "
 "correctly."
 msgstr ""
+"Indtast venligst den samme e-mailadresse igen for at sikre at du har "
+"indtastet den korrekt."
 
 #: pretix/presale/forms/checkout.py:57
 msgid "Please enter the same email address twice."
-msgstr ""
+msgstr "Indtast venligst den samme e-mailadresse to gange."
 
 #: pretix/presale/forms/checkout.py:143
 #, python-brace-format
 msgid "{name} (+ {price})"
-msgstr ""
+msgstr "{name} (+ {price})"
 
 #: pretix/presale/forms/checkout.py:147
 #, python-brace-format
 msgid "{name} (+ {price} plus {taxes}% {taxname})"
-msgstr ""
+msgstr "{name} (+ {price} plus {taxes}% {taxname})"
 
 #: pretix/presale/forms/checkout.py:152
 #, python-brace-format
 msgid "{name} (+ {price} incl. {taxes}% {taxname})"
-msgstr ""
+msgstr "{name} (+ {price} inkl. {taxes}% {taxname})"
 
 #: pretix/presale/forms/checkout.py:158
 #: pretix/presale/templates/pretixpresale/event/fragment_availability.html:5
