--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,10 +5,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-13 07:55+0000\n"
-"PO-Revision-Date: 2018-04-12 10:47+0000\n"
+"PO-Revision-Date: 2018-04-13 07:59+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German <https://translate.pretix.eu/projects/pretix/pretix/de/"
-">\n"
+"Language-Team: German "
+"<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2536,14 +2536,12 @@ msgid "Event end date and time"
 msgstr "Veranstaltungsende und Uhrzeit"
 
 #: pretix/base/pdf.py:89
-#, fuzzy
-#| msgid "2017-05-31 20:00"
 msgid "2017-05-31 22:00"
-msgstr "31.05.2016 20:00"
+msgstr "31.05.2016 22:00"
 
 #: pretix/base/pdf.py:97
 msgid "22:00"
-msgstr ""
+msgstr "22:00"
 
 #: pretix/base/pdf.py:104
 msgid "Event admission date and time"
@@ -5298,6 +5296,7 @@ msgstr "Kalender"
 #: pretix/control/forms/organizer.py:159
 msgid "Link back to organizer overview on all event pages"
 msgstr ""
+"Auf die Veranstalterübersicht von allen Veranstaltungsseiten zurück verlinken"
 
 #: pretix/control/forms/organizer.py:166
 msgid ""
@@ -11243,20 +11242,14 @@ msgid "PayPal reported an event: {}"
 msgstr "PayPal meldete ein Ereignis: {}"
 
 #: pretix/plugins/paypal/templates/pretixplugins/paypal/action_double.html:5
-#, fuzzy, python-format
-#| msgid ""
-#| "The PayPal transaction %(payment)s has succeeded, but the order %(order)s "
-#| "is expired and the product was sold out in the meantime. Therefore, the "
-#| "payment could not be accepted. Please contact the user and refund the "
-#| "money via PayPal's interface."
+#, python-format
 msgid ""
 "The PayPal transaction %(payment)s has succeeded, but the order %(order)s "
 "has already been paid by other means. Please double check and refund the "
 "money via PayPal's interface."
 msgstr ""
 "Die PayPal-Transaktion %(payment)s war erfolgreich, aber die Bestellung "
-"%(order)s war abgelaufen und das Produkt wurde während der Transaktion "
-"ausverkauft. Die Zahlung konnte daher nicht akzeptiert werden. Bitte "
+"%(order)s wurde bereits mit einer anderen Methode bezahlt. Bitte "
 "kontaktieren Sie den Kunden und überweisen Sie das Geld über PayPals "
 "Oberfläche zurück."
 
@@ -12124,20 +12117,14 @@ msgid "Stripe Connect: Publishable key (test)"
 msgstr "Stripe Connect: Öffentlicher Schlüssel (Testmodus)"
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/action_double.html:5
-#, fuzzy, python-format
-#| msgid ""
-#| "The Stripe transaction <a %(stripe_href)s>%(charge)s</a> has succeeded, "
-#| "but the order %(order)s is expired and the product was sold out in the "
-#| "meantime. Therefore, the payment could not be accepted. Please contact "
-#| "the user and refund the money via Stripe's interface."
+#, python-format
 msgid ""
 "The Stripe transaction <a %(stripe_href)s>%(charge)s</a> has succeeded, but "
 "the order %(order)s has already been paid by other means. Please double-"
 "check and refund the money via Stripe's interface."
 msgstr ""
 "Die Stripe-Zahlung <a %(stripe_href)s>%(charge)s</a> war erfolgreich, aber "
-"die Bestellung %(order)s war abgelaufen und das Produkt wurde während der "
-"Transaktion ausverkauft. Die Zahlung konnte daher nicht akzeptiert werden. "
+"die Bestellung %(order)s wurde bereits mit einer anderen Methode bezahlt. "
 "Bitte kontaktieren Sie den Kunden und überweisen Sie das Geld über Stripes "
 "Oberfläche zurück."
 
@@ -12551,10 +12538,9 @@ msgid "Take it live now"
 msgstr "Jetzt veröffentlichen"
 
 #: pretix/presale/templates/pretixpresale/event/base.html:29
-#, fuzzy, python-format
-#| msgid "Sample event name"
+#, python-format
 msgid "Show all events of %(name)s"
-msgstr "Beispielevent"
+msgstr "Alle Veranstaltungen von %(name)s"
 
 #: pretix/presale/templates/pretixpresale/event/base.html:75
 msgid "Contact event organizer"
