Translated on translate.pretix.eu (Dutch)
Currently translated at 34.6% (821 of 2368 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-13 07:55+0000\n"
-"PO-Revision-Date: 2018-04-16 02:00+0000\n"
-"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
+"PO-Revision-Date: 2018-04-16 10:34+0000\n"
+"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -1915,6 +1915,13 @@ msgid ""
 "option after consulting a tax counsel. No warranty given for correct tax "
 "calculation. USE AT YOUR OWN RISK."
 msgstr ""
+"Niet aangeraden. De meeste evenementen worden NIET gekwalificeerd voor "
+"verleggingskosten omdat de plaats van belastingheffing hetzelfde is als de "
+"evenementlocatie. Met deze optie wordt belastingheffing uitgeschakeld voor "
+"alle klanten buiten de EU en voor zakelijke klanten in verschillende EU-"
+"landen die een geldig EU-btw-nummer hebben ingevoerd. Schakel deze optie "
+"alleen in na overleg met een belastingadviseur. Er wordt geen garantie "
+"gegeven voor juiste belastingberekening. GEBRUIK OP EIGEN RISICO."
 
 #: pretix/base/models/tax.py:88
 msgid "Merchant country"
